# Test-HMM

./: LICENSE  README.md  Test-HMM.sln
Test-HMM/: .gitignore  CMakeLists.txt  HMM.h  ReadMe.txt  Test-HMM.cpp  Test-HMM.vcxproj  Test-HMM.vcxproj.filters  register_tests.h  stdafx.cpp  test_add_op.h  test_add_op2.h  tests_add.h  tests_construction.h  tests_cross.h  tests_div.h  tests_dot.h  tests_graphics.h  tests_lenght.h  tests_lenghtSquared.h  tests_mul.h  tests_normalize.h  tests_scalarOperations.h  tests_sub.h  tests_sub_op.h  tests_sub_op2.h  tests_trans.h  tests_transformations.h
Test-HMM/src/: HMM.h
Test-HMM/tests/: test_add.cpp  test_add_op.cpp  test_add_op2.cpp  test_construction.cpp  test_cross.cpp  test_div.cpp  test_dot.cpp  test_graphics.cpp  test_helpers.h  test_lenght.cpp  test_lenghtSquared.cpp  test_mul.cpp  test_normalize.cpp  test_scalarOperations.cpp  test_sub.cpp  test_sub_op.cpp  test_sub_op2.cpp  test_trans.cpp  test_transformations.cpp  tests_div.cpp  tests_mul.cpp
